Release notes
=============

master
------

Bug fixes:

 - Expand %(directory) to . for the root directory. (GH-3)

tig-0.17
--------

Improvements:

 - Start rewrite of the revision graph renderer. Three modes are
   supported UTF-8, ncurses line graphics, and ASCII. Also, enable
   revision graph rendering by default.

Bug fixes:

 - Fix ncurses 5.8 issue by passing non-zero column size to newwin().
 - Fix opening of diffs when browsing branches.

tig-0.16.2
----------

Bug fixes:

 - Fix regression causing empty tree view.
 - Fix set_tabsize() compile error for older versions of ncurses.

tig-0.16.1
----------

Improvements:

 - Add scroll-first-col action to jump to the first column. Bound to '|'
   by default.
 - Add 'status-untracked-dirs' option to ignore unknown directories
   contents in the status view. On by default.

Bug fixes:

 - Fix 'tig show <commit>' to show the provided commit.
 - Fix problem with empty diff views when file specs were passed on the
   command line.
 - Fix segfault when starting tig in pager mode.

tig-0.16
--------

Incompatibilities:

 - Encode everything internally as UTF-8. This can affect performance,
   but should in general improve handling of character lengths etc.
   Also, to properly handle UTF-8 environments use ncurses with wide
   character support.
 - The use of TIG_{MAIN,DIFF,LOG,TREE,BLOB}_CMD environment variables
   has been deprecated. To allow configuration of the diff view,
   TIG_DIFF_OPTS can be used.

Improvements:

 - Plug several memory leaks.
 - Command line arguments are split into diff, revision, and file
   arguments and made available as %(diffargs), %(revargs), and
   %(fileargs). Diff view will limit diffs using %(fileargs).
 - Status view: update the file variable when a line is selected so
   %(file) works as expected.
 - Branch view: add %(branch) symbol providing access to the selected
   branch.
 - Branch view: add entry to browse all branches (uses git-log's --all
   flag).