@@ -10,7 +10,7 @@ SYNOPSIS
 [verse]
 tig        [options] [revisions] [--] [paths]
 tig show   [options] [revisions] [--] [paths]
-tig blame  [rev] path
+tig blame  [options] [rev] path
 tig status
 tig <      [git command output]
 
@@ -37,10 +37,11 @@ parsing. All following options will be passed untouched to the underlying git
 command.
 
 show::
-	Open diff view using the given git show options.
+	Open diff view using the given git-show(1) options.
 
 blame::
-	Show given file annotated or blamed by commits.
+	Show given file annotated by commits.
+	Takes zero or more git-blame(1) options.
 	Optionally limited from given revision.
 
 status::
